--- a/style.css
+++ b/style.css
@@ -1,9 +1,110 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
   width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 0 ;
   box-sizing: border-box;
-  font-family: 'Raleway';
+  font-family: 'Montserrat-zg', sans-serif;
+}
+
+header {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  font-size: 22px;
+  padding: 1em;
+  border-bottom: 1px solid black;
+}
+
+main {
+  padding: 0;
+  font: 'montserrat-zg';
+}
+
+footer {
+  border-top: 1px solid #eee;
+  padding: 4.8rem 0;
+  text-align: center;
+}
+
+
+body a {
+  color: #202020;
+  text-decoration: none;
+  outline: none;
+  transition: all .3s ease-in-out;
+}
+
+img {
+  overflow-clip-margin: content-box;
+  overflow: clip;
+  max-width: 100%
+}
+
+.img_man {
+  width: 100%;
+  height: 100%;
+}
+
+.block {
+  display: flex;
+  justify-content: center; 
+}
+
+.home__main_field {
+  padding: 0 1em;
+}
+
+.home__categories-header {
+  font-size: 30px;
+  margin: 1em 0;
+  text-align: center;
+}
+
+
+.home__categories-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.home__categories-item {
+  padding: 0 1rem;
+  width: 25%;
+  margin-bottom: 1rem;
+}
+
+.hcategory__item-image {
+  margin-bottom: 1rem;
+}
+
+.hcategory__item-image a img {
+  display: flex;
+  position: relative;
+  border-radius: .4rem;
+}
+
+.hcategory__item-name{
+  text-align: center;
+  font-size: 20px;
+}
+
+.hcategory__item-name a {
+  border-bottom: 1px solid transparent;
+}
+
+.hcategory__item-image:hover {
+  transform: scale(1.01);
+  transition: transform .2s linear;
+}
+
+.hcategory__item-image {
+  transition: transform .2s linear;
+  transform: scale(1.00);
+}
+
+.hcategory__item-name a:hover {
+
+  transition: transform .3s linear;
+  border-color:#202020;
 }
