--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ header {
   font-size: 22px;
   padding: 1em;
   border-bottom: 1px solid black;
+  background-color: #252525;
+  color: white;
 }
 
 main {
@@ -26,6 +28,8 @@ footer {
   border-top: 1px solid #eee;
   padding: 4.8rem 0;
   text-align: center;
+  background: #252525;
+  color: white;
 }
 
 
@@ -45,6 +49,12 @@ img {
 .img_man {
   width: 100%;
   height: 100%;
+}
+
+.man_mob_img {
+  display: none;
+  width: 100%;
+  height: auto;
 }
 
 .block {
@@ -146,5 +156,17 @@ img {
   }
   header {
     padding: .5em 1em;
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
+  }
+  .man_mob_img {
+    display:block;
+  }
+  .img_man {
+    display: none;
+  }
+  footer {
+    padding: 1em 0;
   }
 }
