--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
 main {
   padding: 0;
   font: 'montserrat-zg';
-  background-color: #303030;
+  background-color: black;
   color: white
 }
 
