--- a/style.css
+++ b/style.css
@@ -9,14 +9,17 @@ body {
 }
 
 header {
-  display: flex;
-  justify-content: center; 
-  align-items: center;
   font-size: 22px;
   padding: 1em;
-  border-bottom: 1px solid black;
   background-color: #252525;
   color: white;
+}
+
+.top__header-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
 main {
@@ -98,10 +101,14 @@ img {
 .hcategory__item-name{
   text-align: center;
   font-size: 20px;
+  border: 5px solid #252525;
+  border-radius: 5px;
+  background-color: #252525;
 }
 
 .hcategory__item-name a {
   border-bottom: 1px solid transparent;
+  
 }
 
 .hcategory__item-image:hover {
@@ -119,6 +126,32 @@ img {
   transition: transform .3s linear;
   border-color:white;
 }
+
+.hcategory__item-name:hover {
+  transition: transform .5s linear;
+  transform: scale(1.02);
+}
+
+.icon {
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+  display: inline-block;
+  height: 1em;
+  width: 1em;
+  transition: fill 0.3s ease;
+}
+
+.top__contacts-link .icon-telegram {
+  transition: transform .3s linear;
+  color: #F9BC6F;
+  fill: #F9BC6F;
+}
+
+#icon-heart:hover {
+  fill:#F9BC6F;
+}
+
 
 
 @media (max-width: 1024px) {
